# Group-savings-app

./: README.md
Backend/: .env  pyproject.toml  requirements.txt  run.py
Backend/app/: __init__.py  config.py
Backend/app/models/: __init__.py  group.py  membership.py  transaction.py  user.py
Backend/app/routes/: __init__.py  auth.py  groups.py  transactions.py  users.py
Backend/app/services/: auth_service.py  group_service.py  transaction_service.py  user_service.py
Backend/app/utils/: jwt_utils.py  response.py  validators.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: AuthForm.jsx  ContributionForm.jsx  GroupCard.jsx  GroupList.jsx  LoadingSpinner.jsx  NavBar.jsx  Notification.jsx  ProgressBar.jsx  ProtectedRoute.jsx  TransactionList.jsx  WithdrawalForm.jsx
Frontend/src/contexts/: AuthContext.jsx  NotificationContext.jsx
Frontend/src/pages/: CreateGroup.jsx  Dashboard.jsx  GroupDetail.jsx  LoginPage.jsx  NotFound.jsx  Profile.jsx  SignupPage.jsx
Frontend/src/services/: api.js  authService.js  groupService.js  transactionService.js  userService.js
Frontend/src/utils/: Formatters.js  Validation.js  localStorage.js
