[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.2",
    "blinker==1.9.0",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.10.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.1",
    "werkzeug==3.1.3",
]
